# singularity-editing

./: .gitignore  CMakeLists.txt  README.md  main.cc
.github/workflows/: continuous.yml
cmake/: directional.cmake  geometry-central.cmake  libigl.cmake
data/: path.h
src/action/: edge_path.cc  edge_path.h  index_exchange.cc  index_exchange.h  parameterize.cc  parameterize.h  rescaling.cc  rescaling.h  types.h  vector_field.cc  vector_field.h
src/dispatcher/: button_operations.cc  button_operations.h  edge_path.cc  edge_path.h  indices.cc  indices.h
src/store/: geometry.cc  geometry.h  temporary_paths.cc  temporary_paths.h
src/utils/: angle_color.cc  angle_color.h  angle_defects.cc  angle_defects.h  angle_jumps.cc  angle_jumps.h  angle_level_set_boundary.cc  angle_level_set_boundary.h  constrained_angles_cycle.cc  constrained_angles_cycle.h  constrained_parameters_cycle.cc  constrained_parameters_cycle.h  convert_zero_face.cc  convert_zero_face.h  convert_zero_vertex.cc  convert_zero_vertex.h  curl_correction.cc  curl_correction.h  cut_mesh_with_path.cc  cut_mesh_with_path.h  decimate.cc  decimate.h  divide_borders.cc  divide_borders.h  divide_chunks.cc  divide_chunks.h  dual_cycles.cc  dual_cycles.h  edge_paths.cc  edge_paths.h  exact_geodesic.cc  exact_geodesic.h  face_angles.cc  face_angles.h  face_based_to_vertex_based.cc  face_based_to_vertex_based.h  fe_signs.cc  fe_signs.h  flatten_vect.cc  flatten_vect.h  (+50 more)
src/utils/opengl/: MeshGL.cpp  MeshGL.h  ViewerCore.cpp  ViewerCore.h  ViewerData.cpp  ViewerData.h  bind_vertex_attrib_float.cpp  bind_vertex_attrib_float.h
src/utils/opengl/glfw/: Viewer.cpp  Viewer.h  ViewerPlugin.h
src/view/: mouse_down.cc  mouse_down.h  set_angle.cc  set_angle.h  set_color.cc  set_color.h  set_geometry.cc  set_geometry.h  set_indices.cc  set_indices.h  set_path.cc  set_path.h  set_vector_field.cc  set_vector_field.h  types.h  viewer.cc  viewer.h  window.cc  window.h
(+8 files in other folders)
